# standard-cproject

./: README.md  package-lock.json  package.json
src/: index.js
template/: .clang-format  CMakeLists.txt  Dockerfile  README.md  __projectName__.h  {{projectName}}.c  {{projectName}}.h
template/.devcontainer/: devcontainer.json
template/cmake/: config.cmake.in
template/example/: CMakeLists.txt  main.c
